B2BS-914: Shopping Cart Widget. Fixed climbing text out of the screen

--- a/src/Pyz/Yves/MultiCartWidget/Theme/default/components/molecules/mini-cart-detail/mini-cart-detail.scss
+++ b/src/Pyz/Yves/MultiCartWidget/Theme/default/components/molecules/mini-cart-detail/mini-cart-detail.scss
@@ -35,7 +35,7 @@
             text-overflow: ellipsis;
             overflow: hidden;
             display: block;
-            max-width: rem(100);
+            max-width: rem(110);
             white-space: nowrap;
             margin-right: 0.25rem;
 
@@ -50,6 +50,8 @@
         }
 
         &__price {
+            display: block;
+            transform: translateY(0.875rem);
             font-size: $setting-font-size-base;
             font-weight: fw(medium);
             line-height: normal;
